Fixed figure notes for fig:TwoPopDynvLL

--- a/Notes/CCM Notes/main.tex
+++ b/Notes/CCM Notes/main.tex
@@ -330,7 +330,7 @@ The initial conditions will be sampled from normal distributions with means $\mu
 \centering
 \label{fig:TwoPopDynvLL}
 %\includegraphics[scale=0.55]{TwoPopDynvLL.eps}
-\caption{$N$ samples with $\left(\mu_{rx},\mu_{ry},\sigma^2_{rx},\sigma^2_{ry},\mu_{x0},\mu_{y0},\sigma^2_{x0},\sigma^2_{y0}\right) = \left(\ldots\right)$ and $\left(E,\tau\right)=\left(3,1\right)$ for $L=\ldots$.}
+\caption{1000 samples with $\left(\mu_{rx},\mu_{ry},\sigma^2_{rx},\sigma^2_{ry},\mu_{x0},\mu_{y0},\sigma^2_{x0},\sigma^2_{y0}\right) = \left(3.8,3.5,0.1,0.1,0.4,0.2,0.3,0.3\right)$ and $\left(E,\tau\right)=\left(3,1\right)$ for $L=51, 101, 151, \ldots, 1000$.}
 \end{figure}
 
 
